feature: implementando carregamento de partidas no app geral de esportes